Fix: Not Tracking By Ip Address

--- a/src/Locale/English.json
+++ b/src/Locale/English.json
@@ -2,5 +2,6 @@
   "would you rather": "Would you rather",
   "votes": "Votes",
   "control two squirrels": "Control two squirrels",
-  "know the mass of everything you look at": "Know the mass of everything you look at"
+  "know the mass of everything you look at": "Know the mass of everything you look at",
+  "or": "OR"
 }
