--- a/src/Locale/Georgian.json
+++ b/src/Locale/Georgian.json
@@ -2,5 +2,6 @@
   "would you rather": "რომელი გირჩევნია",
   "votes": "ხმების რაოდენობა",
   "control two squirrels": "აკონტროლო ორი ციყვი",
-  "know the mass of everything you look at": "გაიგო ყველაფრის მასა რასაც შეხედავ"
+  "know the mass of everything you look at": "გაიგო ყველაფრის მასა რასაც შეხედავ",
+  "or": "ან"
 }
